--- a/package.json
+++ b/package.json
@@ -26,10 +26,15 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "bulma": "^0.7.1",
     "cypress": "^3.0.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "node-sass": "^4.9.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
     "weak-key": "^1.0.0",
     "webpack": "^4.12.1",
     "webpack-cli": "^3.0.8"
