--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "style-loader": "^0.23.0",
     "weak-key": "^1.0.0",
     "webpack": "^4.12.1",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.0.8",
+    "webpack-livereload-plugin": "^2.1.1"
   },
   "dependencies": {
     "babel-preset-es2016": "^6.24.1",
