--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ djongo = "*"
 pip = "*"
 graphene-django = "*"
 graphene = "*"
+djangorestframework-jwt = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.6"
