--- a/package.json
+++ b/package.json
@@ -41,8 +41,12 @@
     "webpack-livereload-plugin": "^2.1.1"
   },
   "dependencies": {
+    "apollo-boost": "^0.1.16",
+    "apollo-client": "^2.4.2",
     "babel-preset-es2016": "^6.24.1",
     "css-loader": "^1.0.0",
+    "graphql": "^14.0.2",
+    "react-apollo": "^1.4.16",
     "ts-loader": "^5.2.1",
     "webpack-bundle-tracker": "^0.3.0"
   }
