--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "bulma": "^0.7.1",
     "cypress": "^3.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^2.0.0",
     "node-sass": "^4.9.3",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
@@ -41,12 +43,24 @@
     "webpack-livereload-plugin": "^2.1.1"
   },
   "dependencies": {
+    "@material-ui/core": "^3.1.2",
+    "@material-ui/icons": "^3.0.1",
     "apollo-boost": "^0.1.16",
     "apollo-client": "^2.4.2",
+    "babel-plugin-import-rename": "^1.0.1",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
+    "chartist": "^0.11.0",
+    "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
     "graphql": "^14.0.2",
+    "perfect-scrollbar": "^1.4.0",
     "react-apollo": "^1.4.16",
+    "react-chartist": "^0.13.1",
+    "react-router-dom": "^4.3.1",
     "ts-loader": "^5.2.1",
     "webpack-bundle-tracker": "^0.3.0"
   }
