--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "chartist": "^0.11.0",
     "classnames": "^2.2.6",
     "css-loader": "^1.0.0",
+    "emotion": "^9.2.12",
     "graphql": "^14.0.2",
     "perfect-scrollbar": "^1.4.0",
     "react-apollo": "^1.4.16",
     "react-chartist": "^0.13.1",
+    "react-emotion": "^9.2.12",
     "react-router-dom": "^4.3.1",
     "ts-loader": "^5.2.1",
     "webpack-bundle-tracker": "^0.3.0"
